start the form from within the game

--- a/CSharpTris.csproj
+++ b/CSharpTris.csproj
@@ -47,6 +47,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CSharpTris.cs" />
+    <Compile Include="Engine\Form.cs" />
+    <Compile Include="Engine\Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
