--- a/App.config
+++ b/App.config
@@ -1,7 +1,24 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <configuration>
+    <configSections>
+        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="CSharpTris.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup>
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <applicationSettings>
+        <CSharpTris.Properties.Settings>
+            <setting name="PuzzleWidth" serializeAs="String">
+                <value>10</value>
+            </setting>
+            <setting name="PuzzleHeight" serializeAs="String">
+                <value>20</value>
+            </setting>
+            <setting name="SquareWidth" serializeAs="String">
+                <value>24</value>
+            </setting>
+        </CSharpTris.Properties.Settings>
+    </applicationSettings>
 </configuration>
